[refactor] add new security filters
